--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
+      buildContext: $(Build.Repository.LocalPath)
         image: tosamkom/fang
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
