--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,12 @@ jobs:
       run: ./gradlew build
 
     - name: Build and Push Docker Image
+
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-      buildContext: $(Build.Repository.LocalPath)
         image: tosamkom/fang
         registry: docker.io
+        buildContext: DockerTestWebsiteLinux
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
          
