--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        image: tosamkom/fang
+        image: tosamkom/fangyen
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
